Fix social icons to be aligned correctly and have some space in between them

--- a/docs/styles/footer.css
+++ b/docs/styles/footer.css
@@ -78,6 +78,10 @@ footer nav ul {
 		margin: initial;
 	}
 
+	#footer--social > * {
+		margin-right: 0.5rem;
+	}
+
 	.icon-card .fa {
 		width: initial;
 	}
